fix title contrast on bright images

--- a/_sass/_recipes.scss
+++ b/_sass/_recipes.scss
@@ -51,7 +51,7 @@
 }
 
 .recipe-title {
-  background: rgba(black, 0.2);
+  background: rgba(black, 0.5);
   position: absolute;
   bottom: 0;
   left: 0;
